Dynamic stock via Worker + carousel + UI fixes

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ VITE_MAP_LINK_URL=https://www.google.com/maps?q=Rafael%20Castillo%2C%20Buenos%20
 # --- Medición ---
 VITE_GA4_ID=
 VITE_META_PIXEL_ID=
+
+# --- Catálogo dinámico (Worker/KV) ---
+# Ej: https://stock.techxto.ar
+VITE_STOCK_API_BASE=
